--- a/RESTful Routing/RESTfulBlogApp/package.json
+++ b/RESTful Routing/RESTfulBlogApp/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "micro"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "micro": "^9.0.0",
     "mongoose": "^4.12.3"
   }
 }
